--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # This is the default format.
 # For more see: http://jekyllrb.com/docs/permalinks/
-permalink: /:title
+permalink: https://brianasimba.github.io/MLblog/
 # https://help.github.com/articles/migrating-your-pages-site-from-maruku
 markdown: kramdown
 
